# senku

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  dataset.ipynb  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-poetry/: action.yml
.github/workflows/: checks.yml  release.yml
app/: cli.py  inference.py  main.py  train.py  tui.py  tui_app.py
app/core/: common.py  dataset.py  inference.py  rich.py  train.py
app/helpers/: checkpoint.py  classes.py  csv_loader.py  haiku_checker.py  haiku_validator.py
app/loaders/: dataset.py
app/loss/: loss.py
app/models/: gpt.py
app/modules/: activation.py  attention.py  blocks.py  normalization.py
app/pages/: dataset.py  inference.py  landing.py  train.py
app/tokenizer/: tokenizer.py
app/trainer/: trainer.py
app/tui/: dataset.py  inference.py  training.py
notebooks/: gen.ipynb
