[project]
name = "senku"
version = "0.1.0"
description = ""
authors = [
    {name = "Davide Andreoli",email = "davide.andreoli@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "torch (==2.2.2)",
    "syllapy (>=0.7.2,<0.8.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gradio (>=5.38.2,<6.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "questionary (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
